# ChangeLog for games-action/oolite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Mar 2010; <slep@gentoo.org> oolite-9999_pre2579.ebuild:
  drop keywords in snapshot - use tarball

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> metadata.xml:
  Create Changelog,fix metadat
