@@ -1,5 +1,5 @@
 DIST oolite-dev-source-1.73.4.tar.bz2 37486680 RMD160 710e498dc9d8ed5baceb236a789b64ac62240d58 SHA1 f17a4e5655d1e502b7b305127254b4659824090f SHA256 9daffdbe883920725222f23ec2aa101926bdef281cfe62c413b3cff4a10c3007
 EBUILD oolite-1.73.4.ebuild 1479 RMD160 b45846ec74b87af2565b5bb351594194fbe726a9 SHA1 48d4cafee3e13a815165843bd99e2e0981c50656 SHA256 0aa3e24dc2d3745add94a9c46b4f2d0bae4f6f7f872cbe7b907561b009089da6
-EBUILD oolite-9999.ebuild 1572 RMD160 56a9072fb26832b6ea663a4900fa8853d4dea4e9 SHA1 b7c5186cb9fba66ba613a284a0c2b30f6f8c2f47 SHA256 5f257ad8ace3fb47bc780113799977898771e396233fe08149ad72237ffbea51
-MISC ChangeLog 323 RMD160 fce28ce2e4659d5d1fd576e782a653e9ec1f38c0 SHA1 d5ccbc91100a10260e4813ddf8b1e99cbbcc17e6 SHA256 946f006c64d9afa24d0bf8ecdea9077794a43ffef160635cc8e3226a7f74183a
+EBUILD oolite-9999.ebuild 1502 RMD160 908a0125c324c7e236db25005a2b56f1cf81f447 SHA1 1aeb0aa3f66c7ee3a0592de3ee16a002c124a60f SHA256 9013490400001d245ff9b0b925f982c6245f00beb8fea7953ef3bd582b2031f1
+MISC ChangeLog 459 RMD160 b6ac10b1581503710055f9b1754ca8f3fddec618 SHA1 2c78e85202a27ed72f97b2e5e98e43c1db12fc5c SHA256 91452986d759922b64f852b87a9678ae2d4c5f72d9598519ce767b8762643360
 MISC metadata.xml 285 RMD160 3b180e9605078a71428c834c42c4ca7581433609 SHA1 fc8bde1963afd592a87cc7a049f28033df8e214c SHA256 d8f356d55007f61375f1a869d217a23815503be960743b71f2f3a4ff66256b97
